# RP2350-HID-bridge

./: .gitignore  CMakeLists.txt  README.md
src/: hid_modes.h  main.c  native_usb_descriptors.c  pio_mouse_descriptors.c  tusb_config.h  usb_identity.h
src/pio_usb_lib/: CMakeLists.txt  pio_usb.c  pio_usb_configuration.h  pio_usb_device.c  usb_definitions.h  usb_rx.pio  usb_tx.pio
